5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1577_579.log
== TEST (2019-03-19 19:43:03) 
-- CODE:
print("A UFAM tem",2016-1909, "anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:43:07) 
-- CODE:
print("A UFAM tem",2016-1909, "anos de fundacao")
-- EXECUTION TIME:
0.1899
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:43:18) 
-- CODE:
print("A UFAM tem",2016-1909, "anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:43:21) 
-- CODE:
print("A UFAM tem",2016-1909, "anos de fundacao")
-- EXECUTION TIME:
0.142203
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:43:42) 
-- CODE:
print("A UFAM tem",1909, "anos de fundacao")
-- OUTPUT:
A UFAM tem 1909 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:43:50) 
-- CODE:
print("A UFAM tem",1909, "anos de fundacao")
-- EXECUTION TIME:
0.130508
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 1909 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:13:46) 
-- CODE:
print("A UFAM tem",2019-1909, "anos de fundacao")
-- OUTPUT:
A UFAM tem 110 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:13:50) 
-- CODE:
print("A UFAM tem",2019-1909, "anos de fundacao")
-- EXECUTION TIME:
0.193234
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:13:59) 
-- CODE:
print("A UFAM tem",2016-1909, "anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:14:03) 
-- CODE:
print("A UFAM tem",2016-1909, "anos de fundacao")
-- EXECUTION TIME:
0.207603
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:14:23) 
-- CODE:
print("A UFAM tem",2019-1909, "anos de fundacao")
-- OUTPUT:
A UFAM tem 110 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:14:28) 
-- CODE:
print("A UFAM tem",2019-1909, "anos de fundacao")
-- EXECUTION TIME:
0.157102
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:14:40) 
-- CODE:
print("A UFAM tem",2019-1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 110 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:14:43) 
-- CODE:
print("A UFAM tem",2019-1909, "anos de fundacao.")
-- EXECUTION TIME:
0.184045
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:28:54) 
-- CODE:
print("A UFAM tem",2019-1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 110 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:29:08) 
-- CODE:
print("A UFAM tem",2019 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 110 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:29:19) 
-- CODE:
print("A UFAM tem",2019-1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 110 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:29:25) 
-- CODE:
print("A UFAM tem",2019-1909, "anos de fundacao.")
-- EXECUTION TIME:
0.131355
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:31:36) 
-- CODE:
print("A UFAM tem",2019 subtracao 1909, "anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem",2019 subtracao 1909, "anos de fundacao.")
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:31:50) 
-- CODE:
print("A UFAM tem",2019-1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 110 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:31:58) 
-- CODE:
print("A UFAM tem",2016-1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:32:01) 
-- CODE:
print("A UFAM tem",2016-1909, "anos de fundacao.")
-- EXECUTION TIME:
0.144329
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
